2009-12-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor optimization.

	* lib/src/io.c: Expose staticness of `digits' to the compiler.

2009-12-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor portability fix.
	
	* tools/bin/cce.in: Place `-lslc' last on the command line to cope
	with single-pass linkers.

2009-11-24  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' fix.
	
	* tools/bin/slr.in,	
	* tools/lib/r-mt-sim.sh.in: Talk about "graphic update delay"
	instead of "rate", to reflect the features available in the MG
	simulator.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend Fibre syntax recognized by `slr'.
	
	* tools/bin/sag: New syntax `vc(N)' for Fibre which expands to an
	array of complex numbers. (Used by FFT)

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Tweak simulation architecture defaults.
	
	* tools/lib/r-mt-sim.sh.in: Change default place layout to better
	spread cores across memory rings when using COMA.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in the reporting of performance counters.

	* lib/src/perf.c (mtperf_report_intervals): Place interval labels
	at the end of each row when printing CSV with headers, so that
	parsing with simpler tools need not understand double quotes and
	spaces inside strings.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in the reporting of performance counters.

	* lib/src/perf.c: Do not pad the Fibre array if the pad flag is
	set to 0.

2009-11-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `slr'.
	
	* tools/lib/r-mt-sim.sh.in: Restore proper default setting of the
	number of cores when not specified on the command line.

2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Tweak the output format of the reporting of performance counters.
	
	* lib/include/svp/perf.h,	
	* lib/src/perf.c: Change output format as per discussions with
	Dan. Example are given in note [sl8].

2009-11-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>
